[gd_scene load_steps=23 format=3 uid="uid://bu178lg80jrc8"]

[ext_resource type="PackedScene" uid="uid://7ggmotmnlsru" path="res://scenes/enemy/enemy_base.tscn" id="1_sq2nw"]
[ext_resource type="Script" uid="uid://clfhb4m6lva80" path="res://scenes/enemy/blue_bird.gd" id="2_fi4ft"]
[ext_resource type="Texture2D" uid="uid://b2mplua5sted6" path="res://Assets/Sprites/Enemies/BlueBird/Flying (32x32).png" id="3_nycpt"]
[ext_resource type="Texture2D" uid="uid://b4jml8ljm5lw8" path="res://Assets/Sprites/Enemies/BlueBird/Hit (32x32).png" id="4_bkjai"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bkjai"]
atlas = ExtResource("3_nycpt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2joym"]
atlas = ExtResource("3_nycpt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ke6"]
atlas = ExtResource("3_nycpt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0so6w"]
atlas = ExtResource("3_nycpt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdf5m"]
atlas = ExtResource("3_nycpt")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q03ec"]
atlas = ExtResource("3_nycpt")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1hwl"]
atlas = ExtResource("3_nycpt")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp12d"]
atlas = ExtResource("3_nycpt")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tly7f"]
atlas = ExtResource("3_nycpt")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_boh16"]
atlas = ExtResource("4_bkjai")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mc8x"]
atlas = ExtResource("4_bkjai")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8xh1"]
atlas = ExtResource("4_bkjai")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gafm"]
atlas = ExtResource("4_bkjai")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7phnc"]
atlas = ExtResource("4_bkjai")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_boh16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkjai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2joym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ke6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0so6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdf5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q03ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1hwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp12d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tly7f")
}],
"loop": true,
"name": &"fly",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_boh16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mc8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8xh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gafm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7phnc")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bkjai"]
radius = 3.16228

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bkjai"]
size = Vector2(29, 7.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2joym"]
size = Vector2(29, 14.5)

[node name="BlueBird" instance=ExtResource("1_sq2nw")]
script = ExtResource("2_fi4ft")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_boh16")
animation = &"fly"
autoplay = "fly"

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("CircleShape2D_bkjai")

[node name="CollisionShape2D" parent="TopArea" index="0"]
position = Vector2(0.5, -7.25)
shape = SubResource("RectangleShape2D_bkjai")
debug_color = Color(3.51354e-06, 0.632425, 0.451629, 0.42)

[node name="CollisionShape2D" parent="BottomArea" index="0"]
position = Vector2(0.5, 3.75)
shape = SubResource("RectangleShape2D_2joym")
debug_color = Color(0.977563, 0, 0.403135, 0.42)

[connection signal="body_entered" from="TopArea" to="." method="_on_top_area_body_entered"]
[connection signal="body_entered" from="BottomArea" to="." method="_on_bottom_area_body_entered"]
